enable Ironic password for keystone auth
The current version of the ironic-source.yaml uses AdminPassword, it
should use the ironic users password and not the admin user password.
The patch corrects an authentication error by adding IronicPassword
to ironic-source.yaml file.

Change-Id: Idbe4950bb3026e2201ddfddc4b58c2bf98972be9

--- a/ironic-source.yaml
+++ b/ironic-source.yaml
@@ -1,4 +1,9 @@
 Description: 'Ironic: Bare Metal provisioning, API and Conductor services.'
+Parameters:
+  IronicPassword:
+    Type: String
+    Description: Ironic password for keystone access
+    NoEcho: true
 Resources:
   ironic:
     Type: AWS::AutoScaling::LaunchConfiguration
@@ -6,5 +11,4 @@ Resources:
       OpenStack::Role: notcomputeConfig
       ironic:
         db: mysql://ironic:unset@localhost/ironic
-        service-password: {Ref: AdminPassword}
-
+        service-password: {Ref: IronicPassword}
