Use merge.py for the undercloud templates.
This will require some changes to our devtest scripts
and TOCI to ensure we build the overcloud-vm template
before attempting to use it.

Change-Id: I14b5e4a0ccf5f18429bfc33e527bdb4760b8d1a3

--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -41,19 +41,11 @@ Parameters:
     Description: The password for the neutron service account, used by neutron agents.
     Type: String
     NoEcho: true
-  NeutronPublicInterface:
-    Default: eth2
-    Description: What interface to bridge onto br-ex for network nodes.
-    Type: String
   NovaPassword:
     Default: unset
     Description: The password for the nova service account, used by nova-api.
     Type: String
     NoEcho: true
-  PowerManager:
-    Default: nova.virt.baremetal.ipmi.IPMI
-    Description: Bare metal power manager driver.
-    Type: String
 Resources:
   AccessPolicy:
     Properties:
@@ -76,6 +68,7 @@ Resources:
       ImageId: '0'
       InstanceType: foo
     Metadata:
+      OpenStack::Role: notcomputeConfig
       OpenStack::Heat::Stack: {}
       Openstack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, neutron-network-node ]
       admin-password:
@@ -139,25 +132,6 @@ Resources:
       keystone:
         db: mysql://keystone:unset@localhost/keystone
         host: 127.0.0.1
-      nova:
-        compute_hostname: undercloud
-        compute_driver: baremetal.driver.BareMetalDriver
-        db: mysql://nova:unset@localhost/nova
-        host: 127.0.0.1
-        metadata-proxy: false
-        tuning:
-          ram_allocation_ratio: 1.0
-          reserved_host_memory_mb: 0
-        baremetal:
-          use_file_injection: "False"
-          arch:
-            Ref: BaremetalArch
-          db: mysql://nova:unset@localhost/nova_bm
-          power_manager:
-            Ref: PowerManager
-          pxe_deploy_timeout: 2400
-        service-password:
-          Ref: NovaPassword
       neutron:
         host: 127.0.0.1
         ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
