Wait for o-r-c on nova compute as well.
We have seen situations where nova-compute is not ready when notcompute
has run its waitcondition. That leads to  errors while we fail to boot
instances until there is at least one nova compute available.

We also update nova-compute-instance.yaml so that it continues to work
stand-alone.

Change-Id: Iadea7a34e2cd4576cc78659b99c12e1041af5b45

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -67,6 +67,15 @@ Resources:
     Properties:
       UserName:
         Ref: ComputeUser
+  CompletionCondition:
+    Type: AWS::CloudFormation::WaitCondition
+    DependsOn: notcompute
+    Properties:
+      Handle: {Ref: CompletionHandle}
+      Count: '1'
+      Timeout: '1800'
+  CompletionHandle:
+    Type: AWS::CloudFormation::WaitConditionHandle
   NovaCompute0:
     Type: OS::Nova::Server
     Properties:
@@ -90,6 +99,8 @@ Resources:
       InstanceType: '0'
       ImageId: '0'
     Metadata:
+      completion-handle:
+        Ref: CompletionHandle
       os-collect-config:
         cfn:
           access_key_id:
