Name the undercloud resources with 'undercloud'.
Using notcompute for the undercloud resources is a bit confusing
so lets rename them accordingly. This change shouldn't effect
the devtest scripts or toci because we don't pass a parameter
in for the undercloud.

Change-Id: I33c28a3554fe117c5a0a6e641ea277f7a95f2b35

--- a/ironic-source.yaml
+++ b/ironic-source.yaml
@@ -8,7 +8,7 @@ Resources:
   ironic:
     Type: AWS::AutoScaling::LaunchConfiguration
     Metadata:
-      OpenStack::Role: notcomputeConfig
+      OpenStack::Role: undercloudConfig
       ironic:
         db: mysql://ironic:unset@localhost/ironic
         service-password: {Ref: IronicPassword}
