--- a/tuskar-source.yaml
+++ b/tuskar-source.yaml
@@ -11,7 +11,7 @@ Resources:
   undercloudTuskarVm:
     Type: AWS::AutoScaling::LaunchConfiguration
     Metadata:
-      OpenStack::Role: notcomputeConfig
+      OpenStack::Role: undercloudConfig
       tuskar:
         db: mysql://tuskar:unset@localhost/tuskar?charset=utf8
         user: admin
