--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -50,7 +50,7 @@ Resources:
   AccessPolicy:
     Properties:
       AllowedResources:
-      - notcomputeConfig
+      - undercloudConfig
     Type: OS::Heat::AccessPolicy
   Key:
     Properties:
@@ -62,13 +62,13 @@ Resources:
       Policies:
       - Ref: AccessPolicy
     Type: AWS::IAM::User
-  notcomputeConfig:
+  undercloudConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
       ImageId: '0'
       InstanceType: foo
     Metadata:
-      OpenStack::Role: notcomputeConfig
+      OpenStack::Role: undercloudConfig
       OpenStack::Heat::Stack: {}
       Openstack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, neutron-network-node ]
       admin-password:
@@ -81,7 +81,7 @@ Resources:
           - Fn::Select:
             - "ctlplane"
             - Fn::GetAtt:
-              - notcompute
+              - undercloud
               - networks
       cinder:
         db: mysql://cinder:unset@localhost/cinder
@@ -104,25 +104,25 @@ Resources:
           Fn::Join:
             - ''
             - - http://
-              - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [ notcompute, networks ]} ]}]}
+              - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [ undercloud, networks ]} ]}]}
               - ":8003"
         metadata_server_url:
           Fn::Join:
             - ''
             - - http://
-              - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [ notcompute, networks ]} ]}]}
+              - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [ undercloud, networks ]} ]}]}
               - ":8000"
         waitcondition_server_url:
           Fn::Join:
             - ''
             - - http://
-              - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [ notcompute, networks ]} ]}]}
+              - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [ undercloud, networks ]} ]}]}
               - ":8000/v1/waitcondition"
       os-collect-config:
         cfn:
           access_key_id:
             Ref: Key
-          path: notcomputeConfig.Metadata
+          path: undercloudConfig.Metadata
           secret_access_key:
             Fn::GetAtt:
             - Key
@@ -150,7 +150,7 @@ Resources:
       rabbit:
         host: 127.0.0.1
         password: guest
-  notcompute:
+  undercloud:
     Type: OS::Nova::Server
     Properties:
       image:
@@ -164,7 +164,7 @@ Resources:
         cfn:
           access_key_id:
             Ref: Key
-          path: notcomputeConfig.Metadata
+          path: undercloudConfig.Metadata
           secret_access_key:
             Fn::GetAtt:
             - Key
