--- a/undercloud-vm-source.yaml
+++ b/undercloud-vm-source.yaml
@@ -12,7 +12,7 @@ Parameters:
     Description: What username to ssh to the virtual power host with.
     Type: String
 Resources:
-  notcomputeConfig:
+  undercloudConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     Metadata:
       nova:
