--- a/undercloud-bm-source.yaml
+++ b/undercloud-bm-source.yaml
@@ -8,7 +8,7 @@ Parameters:
     Description: Bare metal power manager driver.
     Type: String
 Resources:
-  notcomputeConfig:
+  undercloudConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     Metadata:
       nova:
