Fix case of OpenStack in templates.
merge.py seems to look for OpenStack::ImageBuilder::Elements

But we use Openstack::ImageBuilder::Elements in our templates.

Change-Id: I94ee367cf77c3f2929ee23d2dcdd28622849c89e

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -147,7 +147,7 @@ Resources:
       InstanceType: '0'
     Metadata:
       OpenStack::Heat::Stack: {}
-      Openstack::ImageBuilder::Elements:
+      OpenStack::ImageBuilder::Elements:
       - boot-stack
       - heat-cfntools
       - heat-localip
