--- a/swift-source.yaml
+++ b/swift-source.yaml
@@ -1,4 +1,4 @@
-Description: 'Swift-common: Openstack object storage common configurations'
+Description: 'Swift-common: OpenStack object storage common configurations'
 Parameters:
   SwiftHashSuffix:
     Default: unset
