--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -70,7 +70,7 @@ Resources:
     Metadata:
       OpenStack::Role: notcomputeConfig
       OpenStack::Heat::Stack: {}
-      Openstack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, neutron-network-node ]
+      OpenStack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, neutron-network-node ]
       admin-password:
         Ref: AdminPassword
       admin-token: 
