Make merge.py installable as a package using pbr
Now that merge.py is invokable from another script
(Ia6b6416fe10358d23f2b120283eecaf4c1178cfd) and from comments at that
review, it makes sense to offer a nicer way to consume the merge
functionality.

Once you git clone tripleo-heat-templates you can python setup.py
install and get /usr/bin/tripleo_heat_merge as well as a
tripleo_heat_merge package in python2.7/site-packages.

Makefile edits required because we moved merge.py into the
tripleo_heat_merge directory for the packaging.

Change-Id: I587fa7a826f93f89e8e5c266af7f5765438fe738

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,8 +17,8 @@ classifier =
     Environment :: Console
 
 [files]
-data_files =
-    share/tripleo-heat-tempaltes/examples = examples/*
-    share/tripleo-heat-templates =
-        Makefile
-        *.yaml
+packages =
+    tripleo_heat_merge
+[entry_points]
+console_scripts =
+    tripleo-heat-merge = tripleo_heat_merge.merge:main
