Permit setting overcloud image update policies.
This is the first step towards preserving state on stack updates when the image
id has changed.

I chose REPLACE as the default value because that is the current behaviour and
we can override it from the command line.

Change-Id: I64eab51892922ab51a89a9f389457fd1ed979fb2

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -14,6 +14,10 @@ Parameters:
     Description: Use this flavor
     Type: String
     Default: baremetal
+  ImageUpdatePolicy:
+    Default: 'REPLACE'
+    Description: What policy to use when reconstructing instances. REBUILD for rebuilds, REBUILD_PRESERVE_EPHEMERAL to preserve /mnt.
+    Type: String
   NovaImage:
     Type: String
     Default: overcloud-compute
@@ -81,6 +85,8 @@ Resources:
     Properties:
       image:
         {Ref: NovaImage}
+      image_update_policy:
+        Ref: ImageUpdatePolicy
       flavor: {Ref: Flavor}
       key_name: {Ref: KeyName}
     Metadata:
