--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -31,6 +31,10 @@ Parameters:
     Description: The password for the Heat service account, used by the Heat services.
     Type: String
     NoEcho: true
+  ImageUpdatePolicy:
+    Default: 'REPLACE'
+    Description: What policy to use when reconstructing instances. REBUILD for rebuilds, REBUILD_PRESERVE_EPHEMERAL to preserve /mnt.
+    Type: String
   KeyName:
     Default: default
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
@@ -317,6 +321,8 @@ Resources:
     Properties:
       image:
         Ref: notcomputeImage
+      image_update_policy:
+        Ref: ImageUpdatePolicy
       flavor:
         Ref: Flavor
       key_name:
