Add Ceilometer parameters for the overcloud
Change-Id: I205bb2c0bb7c9b956fd3e0d6b266bdf5afb48864

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -30,6 +30,21 @@ Parameters:
   RabbitPassword:
     Type: String
     NoEcho: true
+  CeilometerComputeAgent:
+    Description: Indicates whether the Compute agent is present and expects nova-compute to be configured accordingly
+    Type: String
+    Default: ''
+    AllowedValues: ['', Present]
+  CeilometerMeteringSecret:
+    Default: unset
+    Description: Secret shared by the ceilometer services.
+    Type: String
+    NoEcho: true
+  CeilometerPassword:
+    Default: unset
+    Description: The password for the ceilometer service account.
+    Type: String
+    NoEcho: true
   NovaComputeDriver:
     Type: String
     Default: libvirt.LibvirtDriver
@@ -44,6 +59,8 @@ Parameters:
     Type: String
     NoEcho: true
   GlanceHost:
+    Type: String
+  CeilometerDSN:
     Type: String
   NovaDSN:
     Type: String
@@ -122,6 +139,11 @@ Resources:
         host: {Ref: NovaApiHost}
         service-password:
           Ref: NovaPassword
+      ceilometer:
+        db: {Ref: CeilometerDSN}
+        metering_secret: {Ref: CeilometerMeteringSecret}
+        service-password: {Ref: CeilometerPassword}
+        compute_agent: {Ref: CeilometerComputeAgent}
       glance:
         host: {Ref: GlanceHost}
       keystone:
