Add a wait condition to undercloud stack
Using of Heat wait conditions allows us to reliably reason when a
stack creation is complete (as the completion handle is triggered
when os-refresh-config completes).

Change-Id: I89725143532177a0b4aea23c1c31bc7737da0896

--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -57,6 +57,15 @@ Resources:
       UserName:
         Ref: User
     Type: AWS::IAM::AccessKey
+  CompletionCondition:
+    Type: AWS::CloudFormation::WaitCondition
+    DependsOn: undercloud
+    Properties:
+      Handle: {Ref: CompletionHandle}
+      Count: '1'
+      Timeout: '1800'
+  CompletionHandle:
+    Type: AWS::CloudFormation::WaitConditionHandle
   User:
     Properties:
       Policies:
@@ -86,6 +95,8 @@ Resources:
       cinder:
         db: mysql://cinder:unset@localhost/cinder
         volume_size_mb: '5000'
+      completion-handle:
+        Ref: CompletionHandle
       db-password: unset
       glance:
         backend: file
