--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -122,7 +122,7 @@ Resources:
       Count: '2'
       Timeout: '1800'
   CompletionHandle:
-    Type: AWS::CloudFormation::WaitConditionHandle
+    Type: OS::Heat::UpdateWaitConditionHandle
   ComputeKey:
     Properties:
       UserName:
