Expose bridge_mappings in the overcloud.
Some overclouds will want physical networks to be accessible by VMs,
and this is a component of that.

Change-Id: I5f65c040526f785b4e976f87980d94588b3fb63c

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -39,6 +39,10 @@ Parameters:
     Default: default
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     Type: String
+  NeutronBridgeMappings:
+    Description: The OVS logical->physical bridge mappings to use.
+    Type: String
+    Default: ''
   NeutronPassword:
     Default: unset
     Description: The password for the neutron service account, used by neutron agents.
@@ -149,7 +153,8 @@ Resources:
         NeutronNetworkType: "gre"
         NeutronEnableTunnelling: "True"
         NeutronNetworkVLANRanges: ""
-        NeutronBridgeMappings: ""
+        NeutronBridgeMappings:
+            Ref: NeutronBridgeMappings
         RabbitPassword: "guest"
   NovaCompute0:
     Type: FileInclude
@@ -284,6 +289,7 @@ Resources:
                 - Fn::GetAtt:
                   - notcompute
                   - networks
+          bridge_mappings: {Ref: NeutronBridgeMappings}
           public_interface:
             Ref: NeutronPublicInterface
           public_interface_raw_device:
