Allow setting a single NTP Server
We can allow multiple later when we have better tools for such things.

Change-Id: Ie902843c28f8a7258b207745653184784e3e9665
Partial-Bug: #1184486

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -100,6 +100,9 @@ Parameters:
   notcomputeImage:
     Type: String
     Default: overcloud-control
+  NtpServer:
+    Type: String
+    Default: ''
 Resources:
   AccessPolicy:
     Properties:
@@ -343,6 +346,9 @@ Resources:
                 - notcompute
                 - networks
         password: guest
+      ntp:
+        servers:
+            - {server: {Ref: NtpServer}, fudge: "stratum 0"}
   notcompute:
     Type: OS::Nova::Server
     Properties:
