Update overcloud to support N compute hosts.
This uses the new merge feature earlier in this series.

Exporting COMPUTESCALE before running make will build a different
template. Note that since Make doesn't depend on variable values, you
need to delete overcloud.yaml between building with different scales.

Change-Id: If05b99ae3596bcc794e3a899ab1443aeb14ec754

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -126,15 +126,22 @@ Resources:
     DependsOn: notcompute
     Properties:
       Handle: {Ref: CompletionHandle}
-      Count: '2'
+      Count: '1'
       Timeout: '1800'
   CompletionHandle:
     Type: OS::Heat::UpdateWaitConditionHandle
-  ComputeKey:
-    Properties:
-      UserName:
-        Ref: ComputeUser
-    Type: AWS::IAM::AccessKey
+  NovaCompute0Key:
+    Type: FileInclude
+    Path: nova-compute-instance.yaml
+    SubKey: Resources.NovaCompute0Key
+  NovaCompute0CompletionCondition:
+    Type: FileInclude
+    Path: nova-compute-instance.yaml
+    SubKey: Resources.NovaCompute0CompletionCondition
+  NovaCompute0CompletionHandle:
+    Type: FileInclude
+    Path: nova-compute-instance.yaml
+    SubKey: Resources.NovaCompute0CompletionHandle
   ComputeUser:
     Properties:
       Policies:
