--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -83,19 +83,19 @@ Resources:
     Type: AWS::IAM::User
     Properties:
       Policies: [ { Ref: ComputeAccessPolicy } ]
-  ComputeKey:
+  NovaCompute0Key:
     Type: AWS::IAM::AccessKey
     Properties:
       UserName:
         Ref: ComputeUser
-  CompletionCondition:
+  NovaCompute0CompletionCondition:
     Type: AWS::CloudFormation::WaitCondition
     DependsOn: notcompute
     Properties:
-      Handle: {Ref: CompletionHandle}
+      Handle: {Ref: NovaCompute0CompletionHandle}
       Count: '1'
       Timeout: '1800'
-  CompletionHandle:
+  NovaCompute0CompletionHandle:
     Type: AWS::CloudFormation::WaitConditionHandle
   NovaCompute0:
     Type: OS::Nova::Server
@@ -110,9 +110,9 @@ Resources:
       os-collect-config:
         cfn:
           access_key_id:
-            Ref: ComputeKey
+            Ref: NovaCompute0Key
           secret_access_key:
-            Fn::GetAtt: [ ComputeKey, SecretAccessKey ]
+            Fn::GetAtt: [ NovaCompute0Key, SecretAccessKey ]
           stack_name: {Ref: 'AWS::StackName'}
           path: NovaCompute0Config.Metadata
       OpenStack::ImageBuilder::Elements: [ nova-compute ]
@@ -123,13 +123,13 @@ Resources:
       ImageId: '0'
     Metadata:
       completion-handle:
-        Ref: CompletionHandle
+        Ref: NovaCompute0CompletionHandle
       os-collect-config:
         cfn:
           access_key_id:
-            Ref: ComputeKey
+            Ref: NovaCompute0Key
           secret_access_key:
-            Fn::GetAtt: [ ComputeKey, SecretAccessKey ]
+            Fn::GetAtt: [ NovaCompute0Key, SecretAccessKey ]
           stack_name: {Ref: 'AWS::StackName'}
           path: NovaCompute0Config.Metadata
       nova:
