Prep work for a scalable control plane.
This is complete as far as it goes but it isn't enough to make running
a scaled out control plane actually work. Specifically, the constructs
to point at API hosts based on looking up a network address aren't
suirtable for scaled out - we need to be using the virtual IP or DNS
round robin or other such resilient configurations, but that is
largely / entirely orthogonal to making the template be ready for
scaling.

Change-Id: Ib9e6db5e7d5db84e4746afdabea046d2b8702bbb

--- a/notcompute.yaml
+++ b/notcompute.yaml
@@ -78,9 +78,9 @@ Resources:
   AccessPolicy:
     Properties:
       AllowedResources:
-      - notcompute
+      - notCompute0
     Type: OS::Heat::AccessPolicy
-  Key:
+  notCompute0Key:
     Properties:
       UserName:
         Ref: User
@@ -90,7 +90,7 @@ Resources:
       Policies:
       - Ref: AccessPolicy
     Type: AWS::IAM::User
-  notcompute:
+  notCompute0:
     Metadata:
       OpenStack::ImageBuilder::Elements:
       - nova-api
@@ -136,12 +136,12 @@ Resources:
               - {Ref: HeatDBPassword}
               - '@127.0.0.1/heat'
         access_key_id:
-          Ref: Key
+          Ref: notCompute0Key
         refresh:
-        - resource: notcompute
+        - resource: notCompute0
         secret_key:
           Fn::GetAtt:
-          - Key
+          - notCompute0Key
           - SecretAccessKey
         stack:
           name:
