--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -90,7 +90,7 @@ Resources:
         Ref: ComputeUser
   NovaCompute0CompletionCondition:
     Type: AWS::CloudFormation::WaitCondition
-    DependsOn: notcompute
+    DependsOn: notCompute0
     Properties:
       Handle: {Ref: NovaCompute0CompletionHandle}
       Count: '1'
