--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -107,8 +107,8 @@ Resources:
   AccessPolicy:
     Properties:
       AllowedResources:
-      - notcompute
-      - notcomputeConfig
+      - notCompute0
+      - notCompute0Config
     Type: OS::Heat::AccessPolicy
   ComputeAccessPolicy:
     Properties:
@@ -116,19 +116,19 @@ Resources:
       - NovaCompute0
       - NovaCompute0Config
     Type: OS::Heat::AccessPolicy
-  Key:
+  notCompute0Key:
     Properties:
       UserName:
         Ref: User
     Type: AWS::IAM::AccessKey
-  CompletionCondition:
+  notCompute0CompletionCondition:
     Type: AWS::CloudFormation::WaitCondition
-    DependsOn: notcompute
+    DependsOn: notCompute0
     Properties:
-      Handle: {Ref: CompletionHandle}
+      Handle: {Ref: notCompute0CompletionHandle}
       Count: '1'
       Timeout: '1800'
-  CompletionHandle:
+  notCompute0CompletionHandle:
     Type: OS::Heat::UpdateWaitConditionHandle
   NovaCompute0Key:
     Type: FileInclude
@@ -152,14 +152,14 @@ Resources:
     Path: nova-compute-instance.yaml
     SubKey: Resources.NovaCompute0Config
     Parameters:
-        NovaApiHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ] }
-        KeystoneHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ] }
-        RabbitHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ] }
-        NeutronHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ] }
-        GlanceHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ] }
-        NovaDSN: {"Fn::Join": ['', ['mysql://nova:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ]}, '/nova']]}
-        CeilometerDSN: {"Fn::Join": ['', ['mysql://ceilometer:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ]}, '/ceilometer']]}
-        NeutronDSN: {"Fn::Join": ['', ['mysql://neutron:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ]}, '/neutron']]}
+        NovaApiHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
+        KeystoneHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
+        RabbitHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
+        NeutronHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
+        GlanceHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
+        NovaDSN: {"Fn::Join": ['', ['mysql://nova:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ]}, '/nova']]}
+        CeilometerDSN: {"Fn::Join": ['', ['mysql://ceilometer:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ]}, '/ceilometer']]}
+        NeutronDSN: {"Fn::Join": ['', ['mysql://neutron:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ]}, '/neutron']]}
         NeutronNetworkType: "gre"
         NeutronEnableTunnelling: "True"
         NeutronNetworkVLANRanges: ""
@@ -175,7 +175,7 @@ Resources:
       Policies:
       - Ref: AccessPolicy
     Type: AWS::IAM::User
-  notcomputeConfig:
+  notCompute0Config:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
       ImageId: '0'
@@ -200,14 +200,14 @@ Resources:
         service-password:
           Ref: CinderPassword
       completion-handle:
-        Ref: CompletionHandle
+        Ref: notCompute0CompletionHandle
       controller-address:
         Fn::Select:
          - 0
          - Fn::Select:
              - 'ctlplane'
              - Fn::GetAtt:
-               - notcompute
+               - notCompute0
                - networks
       db-password: unset
       glance:
@@ -219,7 +219,7 @@ Resources:
            - Fn::Select:
                - 'ctlplane'
                - Fn::GetAtt:
-                 - notcompute
+                 - notCompute0
                  - networks
         service-password:
           Ref: GlancePassword
@@ -242,7 +242,7 @@ Resources:
                 - Fn::Select:
                   - 'ctlplane'
                   - Fn::GetAtt:
-                    - notcompute
+                    - notCompute0
                     - networks
               - ':8003'
         metadata_server_url:
@@ -254,7 +254,7 @@ Resources:
                 - Fn::Select:
                   - 'ctlplane'
                   - Fn::GetAtt:
-                    - notcompute
+                    - notCompute0
                     - networks
               - ':8000'
         waitcondition_server_url:
@@ -266,7 +266,7 @@ Resources:
                 - Fn::Select:
                   - 'ctlplane'
                   - Fn::GetAtt:
-                    - notcompute
+                    - notCompute0
                     - networks
               - ':8000/v1/waitcondition'
       keystone:
@@ -277,7 +277,7 @@ Resources:
             - Fn::Select:
               - 'ctlplane'
               - Fn::GetAtt:
-                - notcompute
+                - notCompute0
                 - networks
       neutron:
         host:
@@ -286,7 +286,7 @@ Resources:
             - Fn::Select:
               - ctlplane
               - Fn::GetAtt:
-                - notcompute
+                - notCompute0
                 - networks
         metadata_proxy_shared_secret: unset
         ovs:
@@ -297,7 +297,7 @@ Resources:
               - Fn::Select:
                 - ctlplane
                 - Fn::GetAtt:
-                  - notcompute
+                  - notCompute0
                   - networks
           bridge_mappings: {Ref: NeutronBridgeMappings}
           public_interface:
@@ -327,7 +327,7 @@ Resources:
             - Fn::Select:
               - 'ctlplane'
               - Fn::GetAtt:
-                - notcompute
+                - notCompute0
                 - networks
         metadata-proxy: true
         service-password:
@@ -335,11 +335,11 @@ Resources:
       os-collect-config:
         cfn:
           access_key_id:
-            Ref: Key
-          path: notcomputeConfig.Metadata
+            Ref: notCompute0Key
+          path: notCompute0Config.Metadata
           secret_access_key:
             Fn::GetAtt:
-            - Key
+            - notCompute0Key
             - SecretAccessKey
           stack_name:
             Ref: AWS::StackName
@@ -350,13 +350,13 @@ Resources:
             - Fn::Select:
               - ctlplane
               - Fn::GetAtt:
-                - notcompute
+                - notCompute0
                 - networks
         password: guest
       ntp:
         servers:
             - {server: {Ref: NtpServer}, fudge: "stratum 0"}
-  notcompute:
+  notCompute0:
     Type: OS::Nova::Server
     Properties:
       image:
@@ -371,11 +371,11 @@ Resources:
       os-collect-config:
         cfn:
           access_key_id:
-            Ref: Key
-          path: notcomputeConfig.Metadata
+            Ref: notCompute0Key
+          path: notCompute0Config.Metadata
           secret_access_key:
             Fn::GetAtt:
-            - Key
+            - notCompute0Key
             - SecretAccessKey
           stack_name:
             Ref: AWS::StackName
@@ -391,6 +391,6 @@ Outputs:
           - Fn::Select:
             - ctlplane
             - Fn::GetAtt:
-              - notcompute
+              - notCompute0
               - networks
         - :5000/v2.0/
