--- a/ssl-source.yaml
+++ b/ssl-source.yaml
@@ -11,7 +11,7 @@ Parameters:
     Type: String
     NoEcho: true
 Resources:
-  notcomputeConfig:
+  notCompute0Config:
     Type: AWS::AutoScaling::LaunchConfiguration
     Metadata:
       stunnel:
