--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -52,19 +52,19 @@ Resources:
       AllowedResources:
       - undercloudConfig
     Type: OS::Heat::AccessPolicy
-  Key:
+  notCompute0Key:
     Properties:
       UserName:
         Ref: User
     Type: AWS::IAM::AccessKey
-  CompletionCondition:
+  notCompute0CompletionCondition:
     Type: AWS::CloudFormation::WaitCondition
     DependsOn: undercloud
     Properties:
-      Handle: {Ref: CompletionHandle}
+      Handle: {Ref: notCompute0CompletionHandle}
       Count: '1'
       Timeout: '1800'
-  CompletionHandle:
+  notCompute0CompletionHandle:
     Type: AWS::CloudFormation::WaitConditionHandle
   User:
     Properties:
@@ -96,7 +96,7 @@ Resources:
         db: mysql://cinder:unset@localhost/cinder
         volume_size_mb: '5000'
       completion-handle:
-        Ref: CompletionHandle
+        Ref: notCompute0CompletionHandle
       db-password: unset
       glance:
         backend: file
@@ -132,11 +132,11 @@ Resources:
       os-collect-config:
         cfn:
           access_key_id:
-            Ref: Key
+            Ref: notCompute0Key
           path: undercloudConfig.Metadata
           secret_access_key:
             Fn::GetAtt:
-            - Key
+            - notCompute0Key
             - SecretAccessKey
           stack_name:
             Ref: AWS::StackName
@@ -174,11 +174,11 @@ Resources:
       os-collect-config:
         cfn:
           access_key_id:
-            Ref: Key
+            Ref: notCompute0Key
           path: undercloudConfig.Metadata
           secret_access_key:
             Fn::GetAtt:
-            - Key
+            - notCompute0Key
             - SecretAccessKey
           stack_name:
             Ref: AWS::StackName
