Add rabbit.cookie attribute
All nodes in rabbitmq cluster should have same cookie. This patch adds
default random cookie to existing templates.

Change-Id: I6579089bd95b0169db20635479e077f3ecade8e2

--- a/notcompute.yaml
+++ b/notcompute.yaml
@@ -191,6 +191,10 @@ Resources:
             Ref: RabbitUserName
           password:
             Ref: RabbitPassword
+        cookie:
+          Fn::GetAtt:
+          - RabbitCookie
+          - value
       service-password:
         Ref: ServicePassword
     Properties:
