--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -124,7 +124,17 @@ Parameters:
     Description: The password for RabbitMQ
     Type: String
     NoEcho: true
+  RabbitCookieSalt:
+    Type: String
+    Default: unset
+    Description: Salt for the rabbit cookie, change this to force the randomly generated rabbit cookie to change.
 Resources:
+  RabbitCookie:
+    Type: OS::Heat::RandomString
+    Properties:
+      length: 20
+      salt:
+        Ref: RabbitCookieSalt
   AccessPolicy:
     Properties:
       AllowedResources:
@@ -435,6 +445,10 @@ Resources:
           Ref: RabbitUserName
         password:
           Ref: RabbitPassword
+        cookie:
+          Fn::GetAtt:
+          - RabbitCookie
+          - value
       ntp:
         servers:
             - {server: {Ref: NtpServer}, fudge: "stratum 0"}
