--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -55,7 +55,17 @@ Parameters:
     Description: The password for RabbitMQ
     Type: String
     NoEcho: true
+  RabbitCookieSalt:
+    Type: String
+    Default: unset
+    Description: Salt for the rabbit cookie, change this to force the randomly generated rabbit cookie to change.
 Resources:
+  RabbitCookie:
+    Type: OS::Heat::RandomString
+    Properties:
+      length: 20
+      salt:
+        Ref: RabbitCookieSalt
   AccessPolicy:
     Properties:
       AllowedResources:
@@ -191,6 +201,10 @@ Resources:
           Ref: RabbitUserName
         password:
           Ref: RabbitPassword
+        cookie:
+          Fn::GetAtt:
+          - RabbitCookie
+          - value
   undercloud:
     Type: OS::Nova::Server
     Properties:
