Remove image parameter changing from merge
The merge tool originally was meant to merge somewhat different things,
and thus this was helpful in the early versions. However, at this point
we want parameters to be more stable and we don't generally merge things
that have their own image parameter.

Meanwhile this feature caused problems as we change resource names.

This is a backward incompatible change of default behavior, but the old
behavior can be had again by passing --change-image-params.

Change-Id: I78cf31f0443f3d9f274758f5471a5bca9155635d

--- a/examples/source_include_subkey_result.yaml
+++ b/examples/source_include_subkey_result.yaml
@@ -1,7 +1,7 @@
 Description: examples/source_include_subkey.yaml
 HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
-  GenericBImage:
+  Foo:
     Type: String
 Resources:
   GenericB:
@@ -10,5 +10,5 @@ Resources:
         Ref: ImportantValue
     Properties:
       image:
-        Ref: GenericBImage
+        Ref: Foo
     Type: OS::Nova::Server
