--- a/examples/source_lib_result.yaml
+++ b/examples/source_lib_result.yaml
@@ -1,14 +1,14 @@
 Description: examples/source.yaml
 HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
-  AImage: null
   Default: my_image
+  SourceImage: null
   Type: String
 Resources:
   A:
     Properties:
       image:
-        Ref: AImage
+        Ref: SourceImage
     Type: OS::Nova::Server
   B:
     Metadata:
