--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -33,7 +33,7 @@ Parameters:
     Description: The password for the Heat service account, used by the Heat services.
     Type: String
     NoEcho: true
-  Image:
+  undercloudImage:
     Default: undercloud
     Type: String
   NeutronPassword:
@@ -165,7 +165,7 @@ Resources:
     Type: OS::Nova::Server
     Properties:
       image:
-        Ref: Image
+        Ref: undercloudImage
       flavor:
         Ref: Flavor
       key_name:
