--- a/examples/source2_lib_result.yaml
+++ b/examples/source2_lib_result.yaml
@@ -1,7 +1,7 @@
 Description: examples/source2.yaml
 HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
-  GenericBImage:
+  BImage:
     Type: String
   ImportantValue:
     Default: a_default
@@ -12,5 +12,5 @@ Resources:
       my_meta: Foo
     Properties:
       image:
-        Ref: GenericBImage
+        Ref: BImage
     Type: OS::Nova::Server
