Support neutron.flat-networks in overclouds.
This is needed to allow configuring the template in
I9fa923b63033edb694720bfe5fc756a7c0fbfd2a.

Change-Id: I65810db156cb3d93291ac56fcf96e3ed2c87e1b2

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -23,6 +23,10 @@ Parameters:
     Default: overcloud-compute
   KeystoneHost:
     Type: String
+  NeutronFlatNetworks:
+    Type: String
+    Default: ''
+    Description: If set, flat networks to configure in neutron plugins.
   NeutronHost:
     Type: String
   RabbitHost:
@@ -149,6 +153,7 @@ Resources:
       keystone:
         host: {Ref: KeystoneHost}
       neutron:
+        flat-networks: {Ref: NeutronFlatNetworks}
         host: {Ref: NeutronHost}
         ovs_db: {Ref: NeutronDSN}
         ovs:
