--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -81,6 +81,10 @@ Parameters:
     Default: stack
     Description: What username to ssh to the virtual power host with.
     Type: String
+  NeutronFlatNetworks:
+    Type: String
+    Default: ''
+    Description: If set, flat networks to configure in neutron plugins.
   NeutronPublicInterface:
     Default: eth0
     Description: What interface to bridge onto br-ex for network nodes.
@@ -162,6 +166,8 @@ Resources:
         NeutronDSN: {"Fn::Join": ['', ['mysql://neutron:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ]}, '/neutron']]}
         NeutronNetworkType: "gre"
         NeutronEnableTunnelling: "True"
+        NeutronFlatNetworks:
+            Ref: NeutronFlatNetworks
         NeutronNetworkVLANRanges: ""
         NeutronBridgeMappings:
             Ref: NeutronBridgeMappings
@@ -280,6 +286,7 @@ Resources:
                 - notCompute0
                 - networks
       neutron:
+        flat-networks: {Ref: NeutronFlatNetworks}
         host:
           Fn::Select:
             - 0
