Make it possible to do physical networks for VMs.
This patch makes it possible to setup physical networks for VMs,
separate to the control plane configuration which is needed for
routed/natted access to physical networks.

Future work is needed to automate ci-overcloud configuration of the
control plane where we need two distinct bridges, but this is enough
to stop folk dying of boredom setting up a sizeable ci-overcloud.

Change-Id: I6ac7129f22bb797467adb0408638781d20081f19

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -29,6 +29,14 @@ Parameters:
     Description: If set, flat networks to configure in neutron plugins.
   NeutronHost:
     Type: String
+  NeutronPhysicalBridge:
+    Default: ''
+    Description: An OVS bridge to create for accessing external networks.
+    Type: String
+  NeutronPublicInterface:
+    Default: ''
+    Description: A port to add to the NeutronPhysicalBridge.
+    Type: String
   RabbitHost:
     Type: String
   RabbitPassword:
@@ -169,6 +177,8 @@ Resources:
           network_vlan_ranges: {Ref: NeutronNetworkVLANRanges}
           bridge_mappings: {Ref: NeutronBridgeMappings}
           enable_tunneling: {Ref: NeutronEnableTunnelling}
+          physical_bridge: {Ref: NeutronPhysicalBridge}
+          public_interface: {Ref: NeutronPublicInterface}
         service-password:
           Ref: NeutronPassword
       admin-password: {Ref: AdminPassword}
