--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -81,6 +81,14 @@ Parameters:
     Type: String
     Default: ''
     Description: If set, flat networks to configure in neutron plugins.
+  HypervisorNeutronPhysicalBridge:
+    Default: ''
+    Description: An OVS bridge to create on each hypervisor.
+    Type: String
+  HypervisorNeutronPublicInterface:
+    Default: ''
+    Description: What interface to add to the HypervisorNeutronPhysicalBridge.
+    Type: String
   NeutronPublicInterface:
     Default: eth0
     Description: What interface to bridge onto br-ex for network nodes.
@@ -165,6 +173,10 @@ Resources:
         NeutronFlatNetworks:
             Ref: NeutronFlatNetworks
         NeutronNetworkVLANRanges: ""
+        NeutronPhysicalBridge:
+            Ref: HypervisorNeutronPhysicalBridge
+        NeutronPublicInterface:
+            Ref: HypervisorNeutronPublicInterface
         NeutronBridgeMappings:
             Ref: NeutronBridgeMappings
         RabbitPassword: "guest"
